Google Cloud/yaml-files/deployments.yaml
apiVersion: apps/v1 # bluexolo production
kind: Deployment
metadata:
  name: django
  namespace: bluexolo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      securityContext:
          fsGroup: 1000
      volumes:
        - name: media-volume
          persistentVolumeClaim:
            claimName: media-pvc
      containers:
      - name: django
        image: bluexolo/bluexolo:production
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 8000
        volumeMounts:
          - mountPath: "/var/www/media"
            name: media-volume
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: celery
  namespace: bluexolo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: media-volume
          persistentVolumeClaim:
            claimName: media-pvc
      containers:
      - name: celery
        image: bluexolo/bluexolo:production
        # resources:
        #   limits:
        #     memory: "512Mi"
        #     cpu: "500m"
        command: ["/bin/bash"]
        args: ["docker/celery-entrypoint.sh"]
        volumeMounts:
          - mountPath: "/var/www/media"
            name: media-volume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: bluexolo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
          - name: media-volume
            persistentVolumeClaim:
              claimName: media-pvc
      containers:
      - name: nginx
        image: snvc00/bluexolo:privileged-proxy #bluexolo/proxy:nginx  # # Directly from Docker Hub
        # resources:
        #   limits:
        #     memory: "256Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: "/var/www/media"
            name: media-volume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: bluexolo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6.2.1-alpine # Directly from Docker Hub
        ports:
          - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assistant
  namespace: bluexolo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assistant
  template:
    metadata:
      labels:
        app: assistant
    spec:
      containers:
      - name: assistant
        image: bluexolo/assistant # Directly from Docker Hub
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robot4-0
  namespace: bluexolo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robot4-0
  template:
    metadata:
      labels:
        app: robot4-0
    spec:
      securityContext:
          fsGroup: 1000
      containers:
      - name: robot4-0
        image: bluexolo/robot:4.0 # 2.9 - 3.2.2 
        ports:
        - containerPort: 22
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: bluexolo
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:9.6.21-alpine
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        args:
          - "-c"
          - "listen_addresses=*"
        ports:
          - containerPort: 5432
#paulbouwer/hello-kubernetes:1.5
