Google Cloud/yaml-files/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluexolo-np
  namespace: bluexolo
spec:
  type: NodePort #DNS
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80 #8080
---
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: bluexolo
spec:
  selector:
    app: django
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: celery
  namespace: bluexolo
spec:
  selector:
    app: celery
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: bluexolo
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: bluexolo
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: assistant
  namespace: bluexolo
spec:
  selector:
    app: assistant
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: robot4-0
  namespace: bluexolo
spec:
  selector:
    app: robot4-0
  ports:
  - port: 22
    targetPort: 22
